# ges-report-to-csv

./: README.md  derive_full_dataset.ipynb  download_reports.py  logger.py  pyproject.toml  table_parser.py
